ajustando pratica8.html

--- a/semana-1/tarefa-8.html
+++ b/semana-1/tarefa-8.html
@@ -9,20 +9,24 @@ MAIOR QUE 40,0	    OBESIDADE GRAVE	III
 
 */
 
-let peso = 82;
+let peso = 150;
 let altura = 1.70;
 let imc = peso/altura ** 2;
 
 if (imc < 18.5) {
     alert("magreza")
 }
+alert ("primeira condiçao");
+
 if (imc < 25){
     alert ("Normal")
 }
+alert ("segunda condiçao");
 if (imc < 40) {
     alert ("obsidade")
 } else {
     alert("obsidade Grave")
 }
+
 
 </script>
