realizando desafio-1 da apostila

--- a/semana-1/questao2Simulado.html
+++ b/semana-1/questao2Simulado.html
@@ -1,11 +1,12 @@
 <script>
-    n1=20;
+    n1=30;
     n2=10;
-    n3=30;
-    if (n1 >= n2 + n3) {
-  if (n2 > n3) {
+    n3=20;
+  if (n1 >= n2 + n3) {
+   if (n2 > n3) {
     alert("opção 1");
   }
+  alert ("infelizmente não deu")
 } else {
   if (n2 < n3) {
     if (n2 == 10) {
