trasnformar kilo em grama

--- a/semana-2/pesoEmGrama.html
+++ b/semana-2/pesoEmGrama.html
@@ -8,17 +8,10 @@
 </head>
 <body>
     <script>
-let entrada = 0;
-let total = 0;
-while (entrada < 10) {
-    entrada = parseInt(prompt("entre com um número"));
-    total += entrada;
-    entrada = 0;
-}
-alert(total);
-
-
-
+        let peso = Number(prompt("digite o seu peso em kilograma"));        
+        let pesoEmgrama = peso/0.001;
+        alert("o seu peso em grama  é " + pesoEmgrama);
+    
     </script>
     
 </body>
