ajustando os exercicios

--- a/semana-2/areaLosango.html
+++ b/semana-2/areaLosango.html
@@ -11,7 +11,7 @@
         let diagonalMaior = parseFloat(prompt("Digite a diagonal maior do Losango"));
         let diagonalMenor = parseFloat(prompt("Digite a diagonal menor do Losango"));        
         let areaLosango = (diagonalMaior * diagonalMenor)/2;
-        alert (`a area do Losango e igual a : ${areaLosango}`);
+        alert (`a area do Losango e igual a : ${areaLosango.toFixed(2)}`);
     </script>
     
 </body>
