--- a/semana-2/salarioMinimo.html
+++ b/semana-2/salarioMinimo.html
@@ -11,7 +11,7 @@
 let salarioMinimo = 1212;
 let salarioFuncionario = Number(prompt("Digite o 'Valor' que o funcionario Recebe"));
 let quantidadeSalarioMinimo = salarioFuncionario/salarioMinimo;
-alert(`o funcionario recebe ${quantidadeSalarioMinimo} vezes Salario Minimo`);
+alert(`o funcionario recebe ${quantidadeSalarioMinimo.toFixed(2)} vezes Salario Minimo`);
 
     </script>
     
