desafio de função

--- a/semana-3/desafioBooleano.html
+++ b/semana-3/desafioBooleano.html
@@ -11,7 +11,7 @@
 	let n1=1;
 	let n2= 1;
 
-	while((n1 != 0 ) && (n2 !=0)) {
+	while((n1 != 0 ) || (n2 !=0)) {
 		n1 = parseInt(prompt("Entre com número 1"));
 		n2 = parseInt(prompt("Entre com número 2"));
 		alert("os números são " + n1 + " e " + n2);
